<resources>
    <string name="app_name">RecipeApp</string>
    <string name="action_settings">Settings</string>

    <string name="message_recipe_not_found">Recipe not found</string>
    <string name="title_recipe">Recipe List</string>
    <string name="title_recipe_detail">Recipe Detail</string>
    <string name="hint_instructions">Instructions</string>
    <string name="hint_ingredients">Ingredients</string>
    <string name="hint_summary">Summary</string>
    <string name="argument_recipe">recipes</string>
    <string name="placeholder_tv_title">Karedok Leunca</string>
    <string name="placeholder_unexpected_error">Unexpected Error!!!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>