<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.fragments.recipeDetail.RecipeDetailFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_recipe_detail"
                android:textAppearance="@style/TextView.Title"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                tools:text="@string/placeholder_tv_title" />

            <ImageView
                android:id="@+id/img_cover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@color/colorWhiteLilac"
                android:contentDescription="@string/title_recipe"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_placeholder_food"
                android:src="@drawable/ic_placeholder_food"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/hint_summary"
                android:textAppearance="@style/TextView.Title.Section" />

            <TextView
                android:id="@+id/tv_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                tools:text="Summary" />

            <TextView
                android:id="@+id/tv_hint_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/hint_ingredients"
                android:textAppearance="@style/TextView.Title.Section" />

            <TextView
                android:id="@+id/tv_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                tools:text="1. Rice\n2. Egg" />

            <TextView
                android:id="@+id/tv_hint_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/hint_instructions"
                android:textAppearance="@style/TextView.Title.Section" />

            <TextView
                android:id="@+id/tv_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                tools:text="1. Boil water\n2. Add sugar" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>